--- a/js/app/views/plans/dispPlan.html
+++ b/js/app/views/plans/dispPlan.html
@@ -323,7 +323,7 @@
 
                                     <button href="#fakelink" class="btn btn-fill btn-error" ng-click="UnCheckAllFromFilter()">Исключить из плана всех из текущего фильтра</button>
 
-                                    <form method="post" action="/develop/api/dsp_patients/toexelFrom">
+                                    <form method="post" action="/develop/api/dsp_patients/toexelFrom" style="display: inline-block">
                                         <input name="surname" value="" type="hidden">
                                         <input name="name" value="" type="hidden">
                                         <input name="surname" value="" type="hidden">
