--- a/js/app/views/main/settings.html
+++ b/js/app/views/main/settings.html
@@ -1,10 +1,108 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<div class="wrapper">
+    <div class="sidebar" data-background-color="white" data-active-color="danger">
 
-</body>
-</html>
+        <!--
+            Tip 1: you can change the color of the sidebar's background using: data-background-color="white | black"
+            Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
+        -->
+
+        <div class="sidebar-wrapper">
+            <div class="logo">
+                <a href=""  ng-click="toLink('')" class="simple-text">
+                    МИАЦ - диспансеризация
+                </a>
+            </div>
+
+            <ul class="nav">
+                <li ng-repeat="n in navbar">
+                    <a href="" ng-click="toLink(n.link)">
+                        <i ng-class="n.icon"></i>
+                        <p ng-bind-html="n.caption"></p>
+                    </a>
+                </li>
+                <li>
+                    <a ng-click="Logout()" class="pointer">
+                        <i class="ti-arrow-top-right"></i>
+                        <p>Выход</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="main-panel">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar bar1"></span>
+                        <span class="icon-bar bar2"></span>
+                        <span class="icon-bar bar3"></span>
+                    </button>
+                    <a class="navbar-brand pointer" ng-click="toLink('')">{{user.fullname}} - </a>
+                    <a class="navbar-brand pointer">Загрузка актуального среза РС ЕРЗЛ</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+
+                        <li>
+                            <a ng-click="Logout()" class="pointer">
+                                <i class="ti-arrow-top-right"></i>
+                                <p>Выход</p>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </nav>
+
+
+        <div class="content" style="padding-top: 10px;">
+            <div class="container-fluid">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card patients-table" >
+                            <div class="header">
+                            </div>
+
+                            <div class="content">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="form-group">
+                                                <label>user_id - выданный Вам в ТФОМС</label>
+                                                <input  class="form-control border-input" type="text" ng-model="s.tfoms_user_id" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label>username - выданный Вам в ТФОМС</label>
+                                                <input  class="form-control border-input" type="text" ng-model="s.tfoms_username" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Пароль - выданный Вам в ТФОМС</label>
+                                                <input  class="form-control border-input" type="text" ng-model="s.tfoms_password" />
+                                            </div>
+                                            <div class="form-group">
+                                                <label>Планируемая дата диспансеризации</label>
+                                                <input  class="form-control border-input" type="date" ng-model="s.tfoms_date_planning" />
+                                            </div>
+                                            <div class="form-group">
+
+                                                <button ng-click="SettingsSave()" class="btn btn-fill btn-warning">Сохранить</button>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-4"></div>
+                                    </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </div>
+</div>
