--- a/js/app/views/main/settings.html
+++ b/js/app/views/main/settings.html
@@ -85,7 +85,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label>Планируемая дата диспансеризации</label>
-                                                <input  class="form-control border-input" type="date" ng-model="s.tfoms_date_planning" />
+                                                <input placeholder="yyyy-MM-dd"  class="form-control border-input" type="date" ng-model="s.tfoms_date_planning" />
                                             </div>
                                             <div class="form-group">
 
