--- a/js/app/views/main/settings.html
+++ b/js/app/views/main/settings.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar bar3"></span>
                     </button>
                     <a class="navbar-brand pointer" ng-click="toLink('')">{{user.fullname}} - </a>
-                    <a class="navbar-brand pointer">Загрузка актуального среза РС ЕРЗЛ</a>
+                    <a class="navbar-brand pointer">Настройки</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
