--- a/js/app/views/loader/thx.html
+++ b/js/app/views/loader/thx.html
@@ -8,9 +8,7 @@
 
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href=""  ng-click="toLink('')" class="simple-text">
-                    МИАЦ - диспансеризация
-                </a>
+                <a href=""  ng-click="toLink('')" class="simple-text text-center">МИАЦ <br>диспансеризация<br>{{s.lpucode}}</a>
             </div>
 
             <ul class="nav">
