--- a/js/app/views/plans/dispPlan.html
+++ b/js/app/views/plans/dispPlan.html
@@ -8,7 +8,9 @@
 
         <div class="sidebar-wrapper">
             <div class="logo">
-                <a href=""  ng-click="toLink('')" class="simple-text text-center">МИАЦ <br>диспансеризация<br>{{s.lpucode}}</a>
+                <a href=""  ng-click="toLink('')" class="simple-text text-center">МИАЦ <br>диспансеризация<br>{{s.lpucode}}
+                <br><span class="as1">Актуальный срез от {{LoadPlansDate}}</span>
+                </a>
             </div>
 
             <ul class="nav">
