--- a/js/app/views/main/index.html
+++ b/js/app/views/main/index.html
@@ -85,11 +85,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+<!--                    <div class="col-md-6">
                         <div class="card pointer" ng-click="toLink('proflPlan')">
                             <div class="header">
                                 <h4 class="title">План по профилактическим осмотрам</h4>
-                                <!--<p class="category">Last Campaign Performance</p>-->
+
                             </div>
                             <div class="content">
                                 <div id="chartPreferences" class="ct-chart ct-perfect-fourth">
@@ -98,18 +98,16 @@
 
                                 <div class="footer">
                                     <div class="chart-legend">
-                                      <!--  <i class="fa fa-circle text-info"></i> Open
-                                        <i class="fa fa-circle text-danger"></i> Bounce
-                                        <i class="fa fa-circle text-warning"></i> Unsubscribe-->
+
                                     </div>
                                     <hr>
                                     <div class="stats">
-                                    <!--    <i class="ti-timer"></i> Campaign sent 2 days ago-->
+
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
 
             </div>
         </div>
